--- a/index.html
+++ b/index.html
@@ -1,36 +1,20 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Aryeo Docs Explorer">
+    <meta name="author" content="Jarrod Parkes">
     <title>Aryeo API Docs</title>
-    <!-- needed for adaptive design -->
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
-
-    <!--
-    Redoc doesn't change outer page styles
-    -->
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Embed elements Elements via Web Component -->
+    <script src="https://unpkg.com/@stoplight/elements/web-components.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@stoplight/elements/styles.min.css">
   </head>
-  <body>   
-    <div id="redoc-container"> 
-
-    </div> 
-    <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"> </script>
-    <script>
-        Redoc.init('Aryeo.DOCS.json', 
-        {                                    
-            theme: {
-                logo: {
-                    gutter: '64px',
-                }
-            }
-        }, document.getElementById('redoc-container'))
-    </script>
+  <body>
+    <elements-api
+      apiDescriptionUrl="https://raw.githubusercontent.com/AryeoHQ/aryeo-api-docs/master/Aryeo.DOCS.json"
+      router="hash"
+      layout="sidebar"
+    />
   </body>
 </html>
